2011-08-03  Bruno Haible  <bruno@clisp.org>

	docs: how to use '-I' option in AM_CPPFLAGS for best VPATH support
	* doc/automake.texi (Program Variables): Recommend -I options to
	both the build directory and the source directory when needed.

2011-07-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: relax a test on amhello examples to cater to Solaris tar
	* tests/amhello-binpkg.test: When the tar implementation in use
	is not GNU tar, relax the tests on tar output, to avoid spurious
	failures.  For example, "tar cvf ..." with GNU tar can output
	lines like "./usr/bin/hello" on the standard output, while with
	Solaris tar it can output lines like "a ./usr/bin/hello 8K" on
	standard output, and with Heirloom tar it can output lines like
	"a ./usr/bin/hello 15 tape blocks" on standard error.

2011-07-15  Benoit Sigoure  <tsunanet@gmail.com>

	docs: add references between the 2 sections on java support
	* doc/automake.texi (Java Support, Java): Add cross-references.

2011-07-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Sync auxiliary files from upstream.
	* INSTALL, lib/INSTALL, lib/config.guess, lib/config.sub,
	lib/texinfo.tex: Sync from upstream.

2011-07-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix weakness in 'tests-environment-backcompat.test'
	* tests/tests-environment-backcompat.test: Do not override the
	content of xfailing test `baz.test' with a "weaker" version that
	fails unconditionally: the test must fail only when the 'strict'
	pragma is in use, in order not to reduce coverage.

2011-07-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs, tests: synchronize examples on silent-rules from config.site
	* doc/automake.texi (Automake silent-rules Option): Reference test
	'silent-configsite.test' in comments.

2011-07-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: portability fixes in tests on amhello examples
	* tests/amhello-binpkg.test: Don't use "tar xzf too.tag.gz" to