@@ -28,8 +28,8 @@ gzip -dc amhello-1.0.tar.gz | tar xf -
 cd amhello-1.0
 
 ./configure --prefix /usr
-make
-make DESTDIR="`pwd`/inst" install
+$MAKE
+$MAKE DESTDIR="`pwd`/inst" install
 cd inst
 find . -type f -print > ../files.lst
 tar cvf amhello-1.0-i686.tar.gz `cat ../files.lst` > tar.got 2>&1
