@@ -1,3 +1,14 @@
+2011-08-03  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	maintcheck: fix maintainer-check failures, both real and spurious
+	* tests/amhello-binpkg.test: Use "$MAKE", not bare "make".
+	* Makefile.am (sc_perl_local): Also allow perl special variable
+	`$~' to be localized.  And be slightly laxer in the regexp, to
+	allow for usages like "local $_ = $foo;".
+	(sc_tests_overriding_macros_on_cmdline): Also allow for command
+	line overriding of the `DISABLE_HARD_ERRORS' make variable.  Try
+	to avoid false positives for usages like "$MAKE || st=$?".
+
 2011-08-03  Bruno Haible  <bruno@clisp.org>
 
 	docs: how to use '-I' option in AM_CPPFLAGS for best VPATH support
